# ZUS

./: .claudeignore  .gitignore  CLAUDE.md  README.md  claude.md  pyproject.toml
docs/: BUILD.docx  BUILD.md  Makefile  changelog.rst  conf.py  index.rst  make.bat
docs/_static/: zus.css
docs/api/: backends.rst  core.rst  credentials.rst  exceptions.rst  index.rst  logging.rst  queries.rst  strategies.rst
scripts/: .gitignore  README.md  daily_sync.py  example_crontab.txt  logging_example.py  logging_quickstart.py  run_daily_sync.sh
src/zus_db_utils/: __init__.py  core.py  exceptions.py  input_adapters.py  logging_config.py
src/zus_db_utils/backends/: __init__.py  base.py  mssql.py  postgres.py  sqlite.py
src/zus_db_utils/credentials/: __init__.py  encrypted_file.py  keyring_provider.py  models.py  store.py
src/zus_db_utils/queries/: incremental_quantity.py
src/zus_db_utils/strategies/: append.py  incremental_quantity.py  upsert.py
tests/: conftest.py  test_append.py  test_core.py  test_incremental_quantity.py  test_logging_config.py  test_reader.py  test_smoke.py  test_upsert.py
tests/test_backends/: test_mssql_backend.py  test_postgres_backend.py  test_sqlite_backend.py
tests/test_credentials/: test_auto.py  test_encrypted_file.py  test_keyring_provider.py  test_models.py
