[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agg_writer"
version = "0.1.0"
description = "Moduł do zapisu zagregowanych danych do różnych baz z różnymi strategiami"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Tomek" },
]
keywords = ["etl", "data-engineering", "pandas", "sqlalchemy", "scd2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pandas>=2.1",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pyarrow>=15.0",

    # Security / credentials
    "cryptography>=42.0",
    "keyring>=25.0",

    # DB drivers
    "psycopg2-binary>=2.9",   # PostgreSQL
    "pyodbc>=5.0",            # MSSQL (wymaga msodbcsql18 w systemie)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs",
    "types-psycopg2",
]

[project.urls]
Homepage = "https://github.com/tomek/agg_writer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agg_writer = ["py.typed"]

# ----------------------------------------------------------------------
# Ruff — linter + formatter
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "TRY",  # tryceratops (exception handling)
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (formatter handles)
    "TRY003",  # avoid long messages in exceptions — czasem są potrzebne
    "S101",    # assert used — OK w testach
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ARG"]  # asserts i hasła w testach
"**/__init__.py" = ["F401"]  # re-exporty

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------
# mypy
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "pyodbc.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "integration: testy wymagające zewnętrznych zasobów (postgres, mssql)",
    "slow: testy trwające > 1s",
]

[tool.coverage.run]
source = ["src/agg_writer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
